project/manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: project
  template:
    metadata:
      labels:
        app: project
    spec:
      containers:
      - name: project
        image: k3s-default-registry:5000/project:latest
        resources:
          limits:
            memory: "64Mi"
            cpu: "100m"
