project/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: project-svc
spec:
  type: NodePort
  selector:
    app: project
  ports:
    - name: http
      protocol: TCP
      nodePort: 30080
      port: 1234
      targetPort: 3000
