project/manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: project-ingress
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: "/project"
            backend:
              service:
                name: project-svc
                port:
                  number: 1234
